--- a/FileDownloadVerification/AtataSamples.FileDownloadVerification/AtataSamples.FileDownloadVerification.csproj
+++ b/FileDownloadVerification/AtataSamples.FileDownloadVerification/AtataSamples.FileDownloadVerification.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="81.0.4044.6900" />
   </ItemGroup>
 
 </Project>
